<resources>
    <string name="app_name">Plant Shop</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="total_tl">"%1$s $"</string>
    <string name="zero">"0$"</string>
    <string name="empty_bag">"Empty Bag"</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">Cvv</string>
    <string name="total_amount">Total Amount:</string>
    <string name="pay_now">PAY NOW!</string>
    <string name="welcome_plant">Welcome To Plant Shop</string>
    <string name="until">Until</string>
    <string name="discount_date">20 Jan to 20 Oct</string>
    <string name="percent_fifty">%50</string>
    <string name="discount">Discount!!</string>
    <string name="see_all_plants">Lets see all plants?</string>
    <string name="plant_app">Plant Shop</string>
    <string name="login">Login</string>
    <string name="btn_login">LOGIN</string>
    <string name="email">eMail</string>
    <string name="enter_email">Enter your eMail</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="enter_password">Enter your password</string>
    <string name="dont_you_register">Dont you have an account? SignUp</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="or">OR</string>
    <string name="payment_method">Enter your payment method</string>
    <string name="payment_done">Payment Confirmed!!</string>
    <string name="all_products">All Products</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_description">Plant Description</string>,
    <string name="btn_add_basket">ADD TO BASKET</string>
    <string name="btn_change_pp">CHANGE PP</string>
    <string name="btn_back_to_shopping">BACK TO SHOPPING</string>
    <string name="thanks">Thank you for choosing us</string>
    <string name="profile">Profile</string>
    <string name="btn_sign_out">SIGN OUT</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="address">Address</string>
    <string name="pay">Order Now</string>
    <string name="required_card_name">Please enter card name</string>
    <string name="required_card_number">Please enter card number</string>
    <string name="required_expiry">Please enter expiry date</string>
    <string name="required_address">Please enter adress</string>
    <string name="required_cvv">Please enter CVV</string>
    <string name="success_payment">"Thank you! Your payment of %1$s $ has been received".</string>
    <string name="home">Home</string>
    <string name="plants">Plants</string>
    <string name="basket">Basket</string>
    <string name="favorites">Favorites</string>
    <string name="confirm_remove_plant">Do you confirm to remove this product from the basket?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="cant_be_empty">Cannot Be Empty</string>
    <string name="added_to_basket">Added To Basket</string>
    <string name="register_done">Register Succesfully Done!</string>
</resources>