<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="successFragment"
            type="com.oguzhanturkmen.myplantapp.ui.success.SuccessFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.success.SuccessFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/done" />

        <TextView
            android:id="@+id/tv_payment_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="175dp"
            android:text="@string/payment_done"
            android:textColor="@color/eden"
            android:textSize="@dimen/font_3xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationView" />

        <TextView
            android:id="@+id/tv_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"
            android:text="@string/thanks"
            android:textColor="@color/eden"
            android:textSize="@dimen/common_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_payment_ok" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back_to_shopping"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"
            android:background="@drawable/banner_background"
            android:onClick="@{() -> successFragment.backToShopping()}"
            android:text="@string/btn_back_to_shopping"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_thanks">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>