<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="plant"
            type="com.oguzhanturkmen.myplantapp.data.models.Plant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dashboard_background"
        tools:context=".ui.plantdetails.PlantDetailsFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:background="@drawable/dashboard_bottom_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/tv_plant_name_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:hint="@string/plant_name"
                android:text="@{plant.plantName}"
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size_l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_l"
                android:hint="@string/plant_description"
                android:text="@{plant.plantDescription}"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_plant_name_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_plant_name_details" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_to_basket_details"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/detail_page_cart_button"
                android:text="@string/btn_add_basket"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_plant_details"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginBottom="300dp"
            android:downloadUrl="@{plant.plantImage}"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>